2001-08-23  Jeff Freedman  <jeff@amy.nerble.net>

	* effects.cc (Lightning_effect): Use palette 10 for flashing.

	* game.cc (Game): Made get_game_type() inlined.
	* actors.cc:  Automatons don't need to eat.

2001-08-22  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* npcnear.cc, actors.h: fixed problem with lenses to view Banes

2001-08-22  Max Horn <max@quendi.de>
	* audio/midi_drivers/mac_midi.*: changed copyright back to "Max Horn"
	  with consent of the team. This was done so that the code can be used
	  for SDL_mixer, too.

2001-08-22  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* actors.cc, actions.cc: fixed compile error + warning

2001-08-22  Jeff Freedman  <jeff@amy.nerble.net>

	* conversation.cc: Limit to two spots, & replace 2nd if no room.
	* actions.cc: 'handle_event_safely()' checks for being deleted.

2001-08-21  Ryan Nunn <triforce@merlin.net.au>
	* gamedat.cc : Fixed endian issue with save counts.

2001-08-21  Max Horn <max@quendi.de>
	* audio/Midi.cc: enabled MIDI driver on OS X
	* audio/midi_drivers/mac_midi.*: enabled MIDI driver on OS X
	
2001-08-20  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* gamewin.cc: fixed Gwenno bug. (also accept NPCnums < 0x80 for bodies)
	* contain.cc: fixed infinite-volume containers (eg. hollow tree)

2001-08-20  Max Horn <max@quendi.de>
	* exult.cc: disabled mouse clicks during dont_move mode
	* gamerend.cc: disabled gump rendering during dont_move mode
	* gamewin.*: fixed Game_window destructor to not crash anymore;
	  added main_actor_dont_move() method
	* keys.cc, mouse.cc: now uses main_actor_dont_move()
	* menulist.cc: enabled Cmd-Q quit command for OS X, too
	* sigame.cc: quick fix to lessen the palette issues a bit; real fix needed
	* macosx/SDLMain.m: reverted to basic SDL version of this file

2001-08-20  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* intrinsics.cc: *_execute_uc_array return true (fixes bedroll bug)
