@@ -1,5 +1,9 @@
 2001-08-23  Jeff Freedman  <jeff@amy.nerble.net>
 
+	* objs/objs.cc: Flat shapes always get rendered first.  Fixes
+	funny rug in New Magincia.
+	* actors.cc (Npc_actor): Fixed remove_schedule() crash.
+
 	* effects.cc (Lightning_effect): Use palette 10 for flashing.
 
 	* game.cc (Game): Made get_game_type() inlined.
